--- a/app/views/index/home.html.erb
+++ b/app/views/index/home.html.erb
@@ -1,4 +1,4 @@
 <div id="container" style="margin-right: auto; margin-left: auto;width: 1200px;/* display: block; */" align="center">
-	<h1>Explorer your Twitter profile's connection'</h1>
+	<h1>Explore your connections on Twitter</h1>
 	<%= image_tag("demo.png") %>
 </div>
