some profile prevalidation before getting follower/friends

--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -30,17 +30,17 @@
 			image : '<%= @user.profileImage %>',
 			},
 		click: {
-			label : "Click a Twitter profile to show its connections",
+			label : "Click on a Twitter profile circle to show its connections",
 			color : colour.pink,
 			alpha : 1,
 			},
 		user: {
-			label : "Your profile is blue while others are orange",
+			label : "Your profile circle is blue while others are orange",
 			color : colour.darkblue,
 			alpha : 1,
 			},
 		border: {
-			label : "Green border means there are more connections",
+			label : "A Green border means there are more connections to be shown",
 			color : colour.darkgreen,
 			alpha : 1,
 		},
